<resources>
    <string name="app_name">MarketPlace</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="select_image">Select Image</string>
    <string name="contact_info">Contact Info</string>

    <!-- Dialogs and Menus -->
    <string name="delete_dialog_title">Delete Item</string>
    <string name="delete_dialog_message">Are you sure you want to delete \"%1$s\"?</string>
    <string name="delete_confirm">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>

    <!-- Formatting -->
    <string name="price_format">%1$s $</string>
    <string name="distance_format">%.1f km away</string>

    <!--    Home Page Categories -->
    <string name="all_btn">All</string>
    <string name="books_btn">Books</string>
    <string name="clothing_btn">Clothing</string>
    <string name="art_btn">Art</string>
    <string name="technology_btn">Technology</string>
    <string name="jewelery_btn">Jewelery</string>



    <!-- Shopping Cart -->
    <string name="shopping_cart">Shopping Cart</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="checkout_summary">Checkout Summary</string>
    <string name="checkout_details">Total Items: %1$d\nTotal Price: %2$.2f $</string>
    <string name="ok">OK</string>
    <string name="total_price_format">Total: $%.2f</string>
    <string name="quantity">Quantity</string>
    <string name="product_name">Product Name</string>
    <string name="checkout_succes"> Checkout successful!</string>



    <!-- Add/Edit Fragment -->
    <string name="location_added">Location Added!</string>
    <string name="current_location_attached">Current location attached</string>
    <string name="location_not_available">Location not available</string>
    <string name="image_upload_failed">Image Upload Failed</string>
    <string name="please_fill_all_fields">Please Fill All The Fileds</string>
    <string name="location_added_already">Location Added</string>
    <string name="product_images">product_images/%1$d.jpg</string>
    <string name="global_store_add"> Add to Global Store</string>
    <string name="save_failed"> Save failed. Check logs for details.</string>
    <string name="km_away">km away</string>
    <string name="add_location_btn">Add Location</string>







    <!-- Categories -->
    <string name="category">Category</string>
    <string name="category_books">Books</string>
    <string name="category_clothing">Clothing</string>
    <string name="category_art">Art</string>
    <string name="category_technology">Technology</string>
    <string name="category_general">General</string>
    <string name="category_jewelery">Jewelery</string>


    <!-- Item Card Placeholders and Content Descriptions -->
    <string name="item_card_product_name_placeholder">Product Name</string>
    <string name="item_card_price_placeholder">$99.99</string>
    <string name="item_card_like_button_description">Like item</string>
    <string name="item_card_add_to_cart_button_description">Add to cart</string>
    <string name="find_more_btn">Discover More Items</string>


    <!-- Favorites -->
    <string name="favorites">Favorites</string>
    
    <!-- Toasts -->
    <string name="item_deleted_successfully">Item deleted</string>
    <string name="delete_failed">Delete failed. Check logs.</string>
    <string name="created_by">Created by Loren , Linoy and Sean</string>


    <string name="version">Version 2.0</string>
    =
</resources>